--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <body>
-        Hello world, I'm Loïc
+        <title>
+            Hello world
+        </title>
+        <p>I'm Loïc</p>
     </body>
 </html>
