--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <title>
-            Hello world
-        </title>
-        <p>I'm Loïc</p>
-    </body>
+<html lang="en">
+<head>
+    <title>Loïc Rakotoson</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Loïc Rakotoson - Data Scientist">
+    <meta name="keywords" content="vcard, science, creative, portfolio">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Favicon-->
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+
+</head>
+
+
 </html>
