--- a/index.html
+++ b/index.html
@@ -8,7 +8,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Favicon-->
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
-</head>
+    
+    <!--Stylesheets-->
+    <link rel="stylesheet" href="css/bootstrap.css"/>
+    <link rel="stylesheet" href="css/owl.carousel.min.css"/>
+    <link rel="stylesheet" href="css/owl.theme.min.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
 
+    <!--[if lt IE 9]>
+	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+</head>
+<body>
+    <!--Preloader-->
+    <div id="preloader">
+        <div class="loader">
+            <div class="uil-ripple-style" style="transform:scale(0.29);">
+            </div>
+        </div>
+    </div>
+
+    <!--Header-->
+    <header class="header-section">
+        <div class="header-warp">
+            <div class="site-logo">
+                <h2>LOIC RAKOTOSON<span>.</span></h2>
+            </div>
+            <!--Menu-->
+            <nav>
+                <ul class="nav-scroll nav-menu">
+                        <li><a href="#home" class="actived">HOME</a></li>
+                        <li><a href="#about">ABOUT</a></li>
+                        <li><a href="#skills">SKILLS</a></li>
+                        <li><a href="#achievement">ACHIEVEMENT</a></li>
+                        <li><a href="#path">PATH</a></li>
+                        <li><a href="#contact">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+</body>
 
 </html>
