--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     </div>
 
     <!--Header-->
-    <header class="header-section">
-        <div class="header-warp">
+    <header class="header-section" !à modifier>
+        <div class="header-warp" !à modifier>
             <div class="site-logo">
                 <h2>LOIC RAKOTOSON<span>.</span></h2>
             </div>
