--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <!--HOME-->
             <section class="home video-section" id="home">
                 <div class="home-content">
-                    <h1><span class="element" data-text1="Hello world, I'm Loïc Rakotoson" data-text2="I'm a Data Scientist and a Graphist" data-text3="I'd love to chat -- boris.paskhaver@nyu.edu" data-loop="true" data-backdelay="3000"></span></h1>
+                    <h1><span class="element" data-text1="Hello world, I'm Loïc Rakotoson" data-text2="I'm a Data Scientist and a Graphist" data-text3="I'd" data-loop="true" data-backdelay="3000"></span></h1>
                     <a class="home-down bounce" href="#about"><i class="fa fa-chevron-down"></i></a>
                     <!-- Social Icons -->
                     <ul class="home-social">
