--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!-- Color Alternatives -->
     <link href="css/colors/switcher.css" rel="stylesheet" type="text/css">
-    <link href="css/colors/color-1.css" rel="stylesheet" type="text/css">
+    <link href="css/colors/color-2.css" rel="stylesheet" type="text/css">
 
     <!--[if lt IE 9]>
 	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -92,7 +92,7 @@
             </ul>
             <div class="home-video">
                 <div id="P1" class="player" style="display:block;height:100%; background: rgba(0,0,0,0.5)"
-                    data-property="{videoURL:'https://youtu.be/eDAR2dxBThk',containment:'self',showControls:false,startAt:0,mute:true,autoPlay:true,loop:true,opacity:1,showYTLogo:false, optimizeDisplay:true}"></div>
+                    data-property="{videoURL:'https://youtu.be/4EuY3wQEEEc',containment:'self',showControls:false,startAt:0,mute:true,autoPlay:true,loop:true,opacity:1,showYTLogo:false, optimizeDisplay:true}"></div>
                 <!--3ovA7zeviRo-->
             </div>
         </div>
@@ -157,14 +157,14 @@
                     <div class="path-timeline col-md-6">
                         <div class="rounded-icon">
                             <i class="fa fa-terminal"></i>
-                            <span>COMPUTING</span>
+                            <span>PROGRAMMING</span>
                         </div>
                         <div class="path-out">
                             <div class="path-info">
 
-                                <h2 class="info-title" style="display: inline;">App Academy</h2>
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Appacademylogo.png"
-                                    height="20" width="20">
+                                <h2 class="info-title" style="display: inline;">Object-Oriented</h2>
+                                <img src="images/engrenage.png"
+                                    height="20" width="27.9">
                                 <span class="info-date">2017</span>
                                 <p>Intensive full-stack web development bootcamp with 3% acceptance rate. Curriculum
                                     includes Ruby, Rails, TDD, JavaScript (ES6), jQuery, SQL, and single-page apps with
@@ -400,15 +400,15 @@
 
                             <div class="col-md-4 contact-info text-center">
                                 <i class="fa fa-phone" aria-hidden="true"></i>
-                                <p>609-658-0933</p>
+                                <p>*</p>
                             </div>
                             <div class="col-md-4 contact-info text-center">
                                 <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                <p>Hoboken, NJ</p>
+                                <p>Rennes, France</p>
                             </div>
                             <div class="col-md-4 contact-info text-center">
                                 <i class="fa fa-envelope" aria-hidden="true"></i>
-                                <p><a href="mailto:boris.paskhaver@nyu.edu">boris.paskhaver@nyu.edu</a></p>
+                                <p><a href="mailto:loicrakotoson@gmail.com">loicrakotoson@gmail.com</a></p>
                             </div>
 
 
