--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <li><a href="#home" class="selected">HOME</a></li>
                             <li><a href="#about">ABOUT</a></li>
                             <li><a href="#skills">SKILLS</a></li>
-                            <li><a href="#achievement">ACHIEVEMENT</a></li>
+                            <li><a href="#portfolio">PORTFOLIO</a></li>
                             <li><a href="#path">PATH</a></li>
                             <li><a href="#contact">CONTACT</a></li>
                         </ul>
@@ -220,11 +220,11 @@
     </section>
 
 
-    <section class="achievement dotted-bg" id="achievement">
+    <section class="portfolio dotted-bg" id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="center-title">
-                    <h1>MY ACHIEVEMENT</h1>
+                    <h1>MY PORTFOLIO</h1>
                     <!-- <div class="ACHIEVEMENT_filter">
                                 <ul>
                                     <li class="select-cat" data-filter="*">All</li>
