--- a/index.html
+++ b/index.html
@@ -196,8 +196,12 @@
                                         height="25" width="25">
                                         <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg"
                                         height="25" width="17.72">
-                                        <big ><font color="white">Python</font></big> advanced - Django framework</p>   
-                                    
+                                        <big ><font color="white">Html5</font></big> & <big ><font color="white">Css3</font></big></p>
+
+                                    <p class="top_10">
+                                        <img src="https://upload.wikimedia.org/wikipedia/commons/2/27/PHP-logo.svg"
+                                        height="25" width="46.29">
+                                        <big ><font color="white">Php</font></big> - Dynamic web</p>
                                     
 
                             </div> <!-- .path-info -->
@@ -208,31 +212,20 @@
                     <!-- education -->
                     <div class="path-timeline col-md-6">
                         <div class="rounded-icon">
-                            <i class="fa fa-graduation-cap"></i>
-                            <span>SPECIAL PROJECTS</span>
+                            <i class="fas fa-square-root-alt"></i>
+                            <span>MATHEMATICS</span>
                         </div>
                         <div class="path-out">
 
                             <div class="path-info">
-                                <h2 class="info-title" style="display: inline;">Udemy Courses</h2>
-                                <img src="https://www.udemy.com/staticx/udemy/images/v4/logo.jpg" width="20" height="20">
-                                <br>
-                                <a href="https://www.udemy.com/user/borispaskhaver/" target="_blank">
-                                    <span class="info-date" style="display:inline;">Instructor Profile
-                                    </span>
-                                </a>
+                                <h2 class="info-title" style="display: inline;">Statistics</h2>
 
-                                <p>Built two comprehensive courses for online elearning marketplace Udemy</p>
-                                <p><strong>Data Analysis with Pandas</strong> & <strong>Learn to Code with Ruby</strong></p>
-                                <p>Over 50 hours of video content<p>
-                                        <p>26,000+ students across 149 countries </p>
-                                        <p>Average course rating of 4.6 / 5 </p>
-                            </div> <!-- .path-info -->
+                            </div><!-- .path-info -->
+                            <div class="path-info">
+                                <h2 class="info-title" style="display: inline;">Data Science</h2>
 
-
-
-                        </div> <!-- .path-out end -->
-                    </div>
+                            </div><!-- .path-info -->
+                        </div><!-- .path-out end -->
 
 
                 </div>
