--- a/index.html
+++ b/index.html
@@ -114,28 +114,28 @@
                     </div>
                     <p>Hello world !<p>
 
-                            <br />
+                    <br />
 
-                            <p>I'm a full-stack web developer based in New York City with experience building apps in
-                                React / Redux and Ruby on Rails.<p>
+                    <p>I'm a full-stack web developer based in New York City with experience building apps in
+                        React / Redux and Ruby on Rails.<p>
 
-                                    <br />
+                    <br />
 
-                                    <p>My favorite part of programming is the never-ending sense that there's always
-                                        something new to master --- a secret language feature, an established design
-                                        pattern, an emerging library or -- most importantly -- a different way of
-                                        looking at a problem. It's like being an artist who gains a new set of
-                                        paintbrushes with every hour of effort. I haven't experienced a hobby that more
-                                        actively encourages the constant thrill of discovery.</p>
+                    <p>My favorite part of programming is the never-ending sense that there's always
+                        something new to master --- a secret language feature, an established design
+                        pattern, an emerging library or -- most importantly -- a different way of
+                        looking at a problem. It's like being an artist who gains a new set of
+                        paintbrushes with every hour of effort. I haven't experienced a hobby that more
+                        actively encourages the constant thrill of discovery.</p>
 
-                                    <br />
+                    <br />
 
-                                    <p>In my spare time, I can be found producing courses on Udemy, playing guitar, and
-                                        using spreadsheets to crack Taylor Swift's songwriting formulas <a href="https://docs.google.com/spreadsheets/d/1izAohM9X9SdcTHtbjUSTfELkQGxDZHvJuk88bG1p5tE/edit#gid=385881434"
-                                            target="_blank">(really.)</a>
-                                    </p>
+                    <p>In my spare time, I can be found producing courses on Udemy, playing guitar, and
+                        using spreadsheets to crack Taylor Swift's songwriting formulas <a href="https://docs.google.com/spreadsheets/d/1izAohM9X9SdcTHtbjUSTfELkQGxDZHvJuk88bG1p5tE/edit#gid=385881434"
+                            target="_blank">(really.)</a>
+                    </p>
 
-                                    <a href="./assets/path.pdf"><button class="rakotoson_button top_15">View My path</button></a>
+                    <a href="./assets/path.pdf" target="_blank"><button class="rakotoson_button top_15">View my Resume</button></a>
 
                 </div>
             </div>
@@ -252,64 +252,23 @@
                     <!-- <div class="isotope_items row"> -->
 
                     <!-- Item -->
-                    <div href="images/jumpstarter-1.png" class="single_item link development col-md-4 col-sm-4">
+                    <div href="images/kernode.png" class="single_item link development col-md-4 col-sm-4">
                         <div class="work-inner">
                             <div class="work-overlay">
                                 <div class="overlay-in">
                                     <div class="work-info">
-                                        <p>Jumpstarter - A single-page React / Rails app inspired by the crowdfunding
-                                            site Kickstarter</p>
+                                        <p>Kernode - A tool to trace image and video source,
+                                            to check trustiness of information.</p>
                                         <div class="work-links">
-                                            <a href="http://www.jumpstarter-app.com/#/" class="link" target="_blank"><i
+                                            <a href="https://github.com/Lrakotoson/Kernode" target="_blank" class="link"><i
                                                     data-icon="5" class="icon"></i></a>
-                                            <a href="images/jumpstarter-2.png" class="image-link lightbox"><i data-icon="W"
+                                            <a href="images/kernode.png" class="image-link lightbox"><i data-icon="W"
                                                     class="icon"></i></a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <img src="images/jumpstarter-2.png" alt="Jumpstarter" height="213">
-                        </div>
-                    </div>
-
-                    <!-- Item -->
-                    <div href="images/work-3.jpg" class="single_item link development col-md-4 col-sm-4">
-                        <div class="work-inner">
-                            <div class="work-overlay">
-                                <div class="overlay-in">
-                                    <div class="work-info">
-                                        <p>Sokoban - A browser puzzle game built with ES6 and Easel.js</p>
-                                        <div class="work-links">
-                                            <a href="https://paskhaver.github.io/sokoban/" target="_blank" class="link"><i
-                                                    data-icon="5" class="icon"></i></a>
-                                            <a href="images/sokoban.png" class="image-link lightbox"><i data-icon="W"
-                                                    class="icon"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <img src="images/sokoban.png" alt="">
-                        </div>
-                    </div>
-
-                    <!-- Item -->
-                    <div href="images/work-3.jpg" class="single_item link development col-md-4 col-sm-4">
-                        <div class="work-inner">
-                            <div class="work-overlay">
-                                <div class="overlay-in">
-                                    <div class="work-info">
-                                        <p>Catalyst - An ES6 utility library for common operations with arrays, objects
-                                            and more</p>
-                                        <div class="work-links">
-                                            <a href="https://github.com/paskhaver/catalyst" target="_blank" class="link"><i
-                                                    data-icon="5" class="icon"></i></a>
-                                            <a href="images/catalyst-code.png" class="image-link lightbox"><i data-icon="W"
-                                                    class="icon"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <img src="images/catalyst.png" alt="">
+                            <img src="images/kernode.png" alt="">
                         </div>
                     </div>
 
