--- a/index.html
+++ b/index.html
@@ -295,16 +295,16 @@
                     <!-- experience -->
                     <div class="path-timeline col-md-6">
                         <div class="rounded-icon">
-                            <i class="fa fa-suitcase"></i>
+                            <i class="fa fa-graduation-cap"></i>
                             <span>EDUCATION</span>
                         </div>
                         <div class="path-out">
                             <div class="path-info">
 
-                                <h2 class="info-title" style="display: inline;">App Academy</h2>
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Appacademylogo.png"
+                                <h2 class="info-title" style="display: inline;">Rennes 2 University</h2>
+                                <img src="https://upload.wikimedia.org/wikipedia/fr/2/23/Logo_univ-rennes2-2016.svg"
                                     height="20" width="20">
-                                <span class="info-date">2017</span>
+                                <span class="info-date">2016 - 2019</span>
                                 <p>Intensive full-stack web development bootcamp with 3% acceptance rate. Curriculum
                                     includes Ruby, Rails, TDD, JavaScript (ES6), jQuery, SQL, and single-page apps with
                                     React / Redux.</p>
@@ -326,7 +326,7 @@
                     <!-- education -->
                     <div class="path-timeline col-md-6">
                         <div class="rounded-icon">
-                            <i class="fa fa-graduation-cap"></i>
+                            <i class="fa fa-suitcase"></i>
                             <span>SPECIAL PROJECTS</span>
                         </div>
                         <div class="path-out">
