--- a/index.html
+++ b/index.html
@@ -300,55 +300,34 @@
                         </div>
                         <div class="path-out">
                             <div class="path-info">
-
-                                <h2 class="info-title" style="display: inline;">Rennes 2 University</h2>
-                                <img src="https://upload.wikimedia.org/wikipedia/fr/2/23/Logo_univ-rennes2-2016.svg"
-                                    height="20" width="20">
-                                <span class="info-date">2016 - 2019</span>
-                                <p>Intensive full-stack web development bootcamp with 3% acceptance rate. Curriculum
-                                    includes Ruby, Rails, TDD, JavaScript (ES6), jQuery, SQL, and single-page apps with
-                                    React / Redux.</p>
+                                    <a href="https://en.u-bretagneloire.fr/" target="_blank">
+                                    <h2 class="info-title" style="display: inline">Bretagne Loire University </h2>
+                                    <img src="https://upload.wikimedia.org/wikipedia/commons/f/f6/Logo_de_l%27Universit%C3%A9_Bretagne_Loire.jpg"
+                                        height="20" width="28.27"></a>
+                                    <span class="info-date">2019 - 2021 </span>
+                                    <p>Master's degree in Mathematics, skilled in <b>Data Science</b>.</p>
+                                    <p>Mathematics, Statistics learning in Big Data</p>
                             </div> <!-- .path-info -->
-
                             <div class="path-info">
-                                <h2 class="info-title" style="display: inline">New York University, Stern School of
-                                    Business</h2>
-                                <img src="https://yt3.ggpht.com/-RZYi5isxH_M/AAAAAAAAAAI/AAAAAAAAAAA/rmWpoe2qZzI/s900-c-k-no-mo-rj-c0xffffff/photo.jpg"
-                                    height="20" width="20">
-                                <span class="info-date">2009 - 2013 </span>
-                                <p>Bachelor of Science (B.S) in Business Economics and Marketing</p>
-                                <p>Minor in Business of Entertainment, Media and Technology</p>
+                                <a href="https://international.univ-rennes2.fr/" target="_blank">
+                                <h2 class="info-title" style="display: inline;">Rennes 2 University</h2>
+                                <img src="https://yt3.ggpht.com/a-/AN66SAyogL-8qABHzTg-do8B74CEZg4OexSsV1w7vA=s900-mo-c-c0xffffffff-rj-k-no"
+                                    height="20" width="20"></a>
+                                <span class="info-date">2016 - 2019</span>
+                                <p>Bachelor of <b>Mathematics</b> and <b>Computing</b> applied to Human and Social Sciences.
+                                    Oriented formation in economics, mathematics, programming, statistics and management.</p>
                             </div> <!-- .path-info -->
                         </div> <!-- .path-out end -->
-                    </div>
+                    </div><!-- education -->
 
 
-                    <!-- education -->
                     <div class="path-timeline col-md-6">
                         <div class="rounded-icon">
                             <i class="fa fa-suitcase"></i>
                             <span>SPECIAL PROJECTS</span>
                         </div>
                         <div class="path-out">
-
-                            <div class="path-info">
-                                <h2 class="info-title" style="display: inline;">Udemy Courses</h2>
-                                <img src="https://www.udemy.com/staticx/udemy/images/v4/logo.jpg" width="20" height="20">
-                                <br>
-                                <a href="https://www.udemy.com/user/borispaskhaver/" target="_blank">
-                                    <span class="info-date" style="display:inline;">Instructor Profile
-                                    </span>
-                                </a>
-
-                                <p>Built two comprehensive courses for online elearning marketplace Udemy</p>
-                                <p><strong>Data Analysis with Pandas</strong> & <strong>Learn to Code with Ruby</strong></p>
-                                <p>Over 50 hours of video content<p>
-                                        <p>26,000+ students across 149 countries </p>
-                                        <p>Average course rating of 4.6 / 5 </p>
-                            </div> <!-- .path-info -->
-
-
-
+                            
                         </div> <!-- .path-out end -->
                     </div>
 
