about me update

--- a/index.html
+++ b/index.html
@@ -116,23 +116,20 @@
 
                     <br />
 
-                    <p>I'm a full-stack web developer based in New York City with experience building apps in
-                        React / Redux and Ruby on Rails.<p>
+                    <p>I'm a full-stack data scientist based in Rennes. I have no special talent, I am only passionately curious. <i>(Albert Einstein)</i><p>
 
                     <br />
 
-                    <p>My favorite part of programming is the never-ending sense that there's always
-                        something new to master --- a secret language feature, an established design
-                        pattern, an emerging library or -- most importantly -- a different way of
-                        looking at a problem. It's like being an artist who gains a new set of
-                        paintbrushes with every hour of effort. I haven't experienced a hobby that more
-                        actively encourages the constant thrill of discovery.</p>
+                    <p>My passion for data science and programming is endless, 80 percent of my time I update my knowledge and discorver data.
+                        Entrepreneurial mindset allow to develop my capacity to understand issues and the new possibilities that data can offer, 
+                        curiousity enable me to sift throught data to find answers and more insights.
+                        I acquire big part of my skills with all the projects I participated, it is why I think we are all different and unique
 
                     <br />
 
-                    <p>In my spare time, I can be found producing courses on Udemy, playing guitar, and
-                        using spreadsheets to crack Taylor Swift's songwriting formulas <a href="https://docs.google.com/spreadsheets/d/1izAohM9X9SdcTHtbjUSTfELkQGxDZHvJuk88bG1p5tE/edit#gid=385881434"
-                            target="_blank">(really.)</a>
+                    <p>In my free time, I participate in 
+                        <a href="https://fr.eyeka.com/u/Pointh_Carey" target="_blank">Eyeka contests</a>
+                        to hone my graphics design skills and my creativity, helping 
                     </p>
 
                     <a href="./assets/path.pdf" target="_blank"><button class="rakotoson_button top_15">View my Resume</button></a>
@@ -315,7 +312,7 @@
                                     height="20" width="20"></a>
                                 <span class="info-date">2016 - 2019</span>
                                 <p>Bachelor of <b>Mathematics</b> and <b>Computing</b> applied to Human and Social Sciences.
-                                    Oriented formation in economics, mathematics, programming, statistics and management.</p>
+                                    Oriented formation in economics, mathematics, computer science, statistics and management.</p>
                             </div> <!-- .path-info -->
                         </div> <!-- .path-out end -->
                     </div><!-- education -->
@@ -327,7 +324,7 @@
                             <span>SPECIAL PROJECTS</span>
                         </div>
                         <div class="path-out">
-                            
+
                         </div> <!-- .path-out end -->
                     </div>
 
