--- a/index.html
+++ b/index.html
@@ -120,10 +120,13 @@
 
                     <br />
 
-                    <p>My passion for data science and programming is endless, 80 percent of my time I update my knowledge and discorver data.
+                    <p>
+                        My passion for data science and programming is endless, 80 percent of my time I update my knowledge and discorver data.
                         Entrepreneurial mindset allow to develop my capacity to understand issues and the new possibilities that data can offer, 
                         curiousity enable me to sift throught data to find answers and more insights.
-                        I acquire big part of my skills with all the projects I participated, it is why I think we are all different and unique
+                    </p><p>
+                        My experiences in the projects I have been involved in have allowed me to acquire many skills that cannot be learned in college,
+                        it is why I think we are all different and unique so teamwork is essential 
 
                     </p>
                     <br />
