Colors update and about me section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- Color Alternatives -->
     <link href="css/colors/switcher.css" rel="stylesheet" type="text/css">
-    <link href="css/colors/color-2.css" rel="stylesheet" type="text/css">
+    <link href="css/colors/color.css" rel="stylesheet" type="text/css">
 
     <!--[if lt IE 9]>
 	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -126,14 +126,14 @@
                         curiousity enable me to sift throught data to find answers and more insights.
                     </p><p>
                         My experiences in the projects I have been involved in have allowed me to acquire many skills that cannot be learned in college,
-                        it is why I think we are all different and unique so teamwork is essential 
-
+                        it is why I think we are all different and unique so teamwork is essential to complete the big puzzle of data science.
                     </p>
                     <br />
 
-                    <p>In my free time, I participate in 
+                    <p>In my free time, I can be found participating in 
                         <a href="https://fr.eyeka.com/u/Pointh_Carey" target="_blank">Eyeka contests</a>
-                        to hone my graphics design skills and my creativity, helping 
+                        to hone my graphics design skills and my creativity, looking up to the stars as an <i>astronogeek</i> or just developing 
+                        my <a href="#portfolio" style="color:gray">current</a> personal project.
                     </p>
 
                     <a href="./assets/path.pdf" target="_blank"><button class="rakotoson_button top_15">View my Resume</button></a>
@@ -240,14 +240,6 @@
             <div class="row">
                 <div class="center-title">
                     <h1>MY PORTFOLIO</h1>
-                    <!-- <div class="ACHIEVEMENT_filter">
-                                <ul>
-                                    <li class="select-cat" data-filter="*">All</li>
-                                    <li data-filter=".web-design">Web Design</li>
-                                    <li data-filter=".aplication">Applications</li>
-                                    <li data-filter=".development">Development</li>
-                                </ul>
-                            </div> -->
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-12 top_30">
                     <!-- <div class="isotope_items row"> -->
@@ -261,8 +253,8 @@
                                         <p>Kernode - A tool to trace image and video source,
                                             to check trustiness of information.</p>
                                         <div class="work-links">
-                                            <a href="https://github.com/Lrakotoson/Kernode" target="_blank" class="link"><i
-                                                    data-icon="5" class="icon"></i></a>
+                                            <a href="https://github.com/Lrakotoson/Kernode" target="_blank" class="link">
+                                                <i data-icon="5" class="icon"></i></a>
                                             <a href="images/kernode.png" class="image-link lightbox"><i data-icon="W"
                                                     class="icon"></i></a>
                                         </div>
