--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section class="home video-section" id="home">
         <div class="home-content">
             <h1><span class="element" data-text1="Hello world, <br/>I'm Loïc Rakotoson" data-text2="I'm a Data Scientist <br/>and a Graphic Designer"
-                    data-text3="I'd like to chat <br/> loic" data-loop="true" data-backdelay="3000"></span></h1>
+                    data-text3="I'd like to chat <br/> contact@loicrakotoson.com" data-loop="true" data-backdelay="3000"></span></h1>
             <a class="home-down bounce" href="#about"><i class="fa fa-chevron-down"></i></a>
             <!-- Social Icons -->
             <ul class="home-social">
@@ -352,8 +352,9 @@
                                 <p>Rennes, France</p>
                             </div>
                             <div class="col-md-4 contact-info text-center">
+                                <a href="mailto:contact@loicrakotoson.com" style="color:#ffa700">
                                 <i class="fa fa-envelope" aria-hidden="true"></i>
-                                <p><a href="mailto:loicrakotoson@gmail.com">loicrakotoson@gmail.com</a></p>
+                                <p>contact@loicrakotoson.com</a></p>
                             </div>
 
 
