--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
     <link rel="stylesheet" href="icon-fonts/font-awesome-4.5.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="icon-fonts/essential-regular-fonts/essential-icons.css" />
 
-    <!-- Color Alternatives -->
+    <!-- Color -->
     <link href="css/colors/switcher.css" rel="stylesheet" type="text/css">
     <link href="css/colors/color.css" rel="stylesheet" type="text/css">
+
+    <!-- Google verification -->
+    <meta name="google-site-verification" content="zgHWVx0OgxuDkOt_GuHju2ZOSrE1fpgmUjV0yrxvo1s" />
 
     <!--[if lt IE 9]>
 	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
