index update with resume

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         my <a href="#portfolio" style="color:gray">current</a> personal project.
                     </p>
 
-                    <a href="./assets/path.pdf" target="_blank"><button class="rakotoson_button top_15">View my Resume</button></a>
+                    <a href="./assets/Resume_LOIC_RAKOTOSON.pdf" target="_blank"><button class="rakotoson_button top_15">View my Resume</button></a>
 
                 </div>
             </div>
