--- a/index.html
+++ b/index.html
@@ -85,8 +85,11 @@
     <!--HOME-->
     <section class="home video-section" id="home">
         <div class="home-content">
-            <h1><span class="element" data-text1="Hello world, <br/>I'm Loïc Rakotoson" data-text2="I'm a Data Scientist <br/>and a Graphic Designer"
-                    data-text3="I'd like to chat <br/> contact@loicrakotoson.com" data-loop="true" data-backdelay="3000"></span></h1>
+            <h1>
+                <span class="element" data-text1="Hello world, <br/>I'm Loïc Rakotoson" data-text2="I'm a Data Scientist <br/>and a Graphic Designer"
+                    data-text3="I'd like to chat <br/> contact@loicrakotoson.com" data-loop="true" data-backdelay="3000">
+                </span>
+            </h1>
             <a class="home-down bounce" href="#about"><i class="fa fa-chevron-down"></i></a>
             <!-- Social Icons -->
             <ul class="home-social">
