--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
     <meta name="keywords" content="vcard, science, creative, resume">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Favicon-->
-    <link href="favicon.ico" rel="shortcut icon" />
+    <link href="favicon.ico" rel="shortcut icon" >
 
     <!--Stylesheets-->
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/owl.theme.css" />
-    <link rel="stylesheet" href="css/owl.carousel.css" />
-    <link rel="stylesheet" href="css/magnific-popup.css" />
-    <link rel="stylesheet" href="css/perfect-scrollbar.css" />
-    <link rel="stylesheet" href="css/jquery.mb.YTPlayer.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" >
+    <link rel="stylesheet" href="css/reset.css" >
+    <link rel="stylesheet" href="css/owl.theme.css" >
+    <link rel="stylesheet" href="css/owl.carousel.css" >
+    <link rel="stylesheet" href="css/magnific-popup.css" >
+    <link rel="stylesheet" href="css/perfect-scrollbar.css" >
+    <link rel="stylesheet" href="css/jquery.mb.YTPlayer.min.css" >
+    <link rel="stylesheet" href="css/style.css" >
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/4f6a4b08efdad6bb29f9cc801f5c07e263b39907/devicon.min.css">
 
     <!-- Google Web fonts -->
     <link href="https://fonts.googleapis.com/css?family=Arvo:300,400,500,600,700" rel="stylesheet">
     <!-- Font icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" href="icon-fonts/font-awesome-4.5.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="icon-fonts/essential-regular-fonts/essential-icons.css" />
+    <link rel="stylesheet" href="icon-fonts/font-awesome-4.5.0/css/font-awesome.min.css" >
+    <link rel="stylesheet" href="icon-fonts/essential-regular-fonts/essential-icons.css" >
 
     <!-- Color -->
     <link href="css/colors/switcher.css" rel="stylesheet" type="text/css">
