--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@
                         my <a href="#portfolio" style="color:gray">current</a> personal project.
                     </p>
 
-                    <a href="./assets/Resume_LOIC_RAKOTOSON.pdf" target="_blank"><button class="rakotoson_button top_15">View my Resume</button></a>
+                    <form class = "resume_view" action="./assets/Resume_LOIC_RAKOTOSON.pdf" target="_blank" method="get">
+                        <button class="rakotoson_button top_15">View my Resume</button>
+                    </form>
 
                 </div>
             </div>
