--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <section class="home video-section" id="home">
         <div class="home-content">
             <h1>
-                <span class="element" data-text1="Hello world, <br/>I'm Loïc Rakotoson" data-text2="I'm a Data Scientist <br/>and a Graphic Designer"
+                <span class="element" data-text1="Hello world, <br/>I'm Loïc Rakotoson" data-text2="I'm a Data Science student <br/>based in Rennes"
                     data-text3="I'd like to chat <br/> contact@loicrakotoson.com" data-loop="true" data-backdelay="3000">
                 </span>
             </h1>
@@ -122,7 +122,7 @@
 
                     <br />
 
-                    <p>I'm a full-stack data scientist based in Rennes. I have no special talent, I am only passionately curious. <i>(Albert Einstein)</i><p>
+                    <p>I'm a data science student based in Rennes. I have no special talent, I am only passionately curious. <i>(Albert Einstein)</i><p>
 
                     <br />
 
@@ -191,10 +191,10 @@
                                         height="25" width="25">
                                         <big ><font color="white">R</font></big> - Statistical computing and graphics</p>
                                     
-                                    <p class="top_10">
+                                    <!-- <p class="top_10">
                                         <img src="images/SAS_logo.png"
                                         height="25" width="25">
-                                        <big ><font color="white">Sas</font></big> - Statistical analysis</p>
+                                        <big ><font color="white">Sas</font></big> - Statistical analysis</p> -->
                             </div> <!-- .path-info -->
 
                             <div class="path-info">
@@ -320,7 +320,7 @@
                             <span>EDUCATION</span>
                         </div>
                         <div class="path-out">
-                            <div class="path-info">
+                            <!-- <div class="path-info">
                                     <a href="https://en.u-bretagneloire.fr/" target="_blank">
                                     <h2 class="info-title" style="display: inline">Bretagne Loire University </h2>
                                     <img src="https://upload.wikimedia.org/wikipedia/commons/f/f6/Logo_de_l%27Universit%C3%A9_Bretagne_Loire.jpg"
@@ -328,7 +328,7 @@
                                     <span class="info-date">2019 - 2021 </span>
                                     <p>Master's degree in Mathematics, skilled in <b>Data Science</b>.</p>
                                     <p>Mathematics, Statistics learning in Big Data</p>
-                            </div> <!-- .path-info -->
+                            </div> --><!-- .path-info -->
                             <div class="path-info">
                                 <a href="https://international.univ-rennes2.fr/" target="_blank">
                                 <h2 class="info-title" style="display: inline;">Rennes 2 University</h2>
