kernode update info

--- a/index.html
+++ b/index.html
@@ -273,25 +273,27 @@
                     <!-- <div class="isotope_items row"> -->
 
                     <!-- Item -->
-                    <div href="images/kernode.png" class="single_item link development col-md-4 col-sm-4">
-                        <div class="work-inner">
-                            <div class="work-overlay">
-                                <div class="overlay-in">
-                                    <div class="work-info">
-                                        <p>Kernode - A tool to trace image and video source,
-                                            to check trustiness of information.</p>
-                                        <div class="work-links">
-                                            <a href="https://github.com/Lrakotoson/Kernode" target="_blank" class="link">
-                                                <i data-icon="5" class="icon"></i></a>
-                                            <a href="images/kernode.png" class="image-link lightbox"><i data-icon="W"
-                                                    class="icon"></i></a>
+                    <a href="images/kernode.png">
+                        <div class="single_item link development col-md-4 col-sm-4">
+                            <div class="work-inner">
+                                <div class="work-overlay">
+                                    <div class="overlay-in">
+                                        <div class="work-info">
+                                            <p>Kernode - A tool to trace image and video source,
+                                                to check trustiness of information.</p>
+                                            <div class="work-links">
+                                                <a href="https://github.com/Lrakotoson/Kernode" target="_blank" class="link">
+                                                    <i data-icon="5" class="icon"></i></a>
+                                                <a href="images/kernode.png" class="image-link lightbox"><i data-icon="W"
+                                                        class="icon"></i></a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
+                                <img src="images/kernode.png" alt="">
                             </div>
-                            <img src="images/kernode.png" alt="">
                         </div>
-                    </div>
+                    </a>
 
 
 
