dark theme is resume r

--- a/assets/documents/education/resume_r.html
+++ b/assets/documents/education/resume_r.html
@@ -38,7 +38,7 @@ table.sourceCode, tr.sourceCode, td.lineNumbers, td.sourceCode {
 table.sourceCode { width: 100%; line-height: 100%; background-color: #f8f8f8; }
 td.lineNumbers { text-align: right; padding-right: 4px; padding-left: 4px; color: #aaaaaa; border-right: 1px solid #aaaaaa; }
 td.sourceCode { padding-left: 5px; }
-pre, code { background-color: #f8f8f8; }
+pre, code { background-color: #e7d1d1; }
 code > span.kw { color: #204a87; font-weight: bold; } /* Keyword */
 code > span.dt { color: #204a87; } /* DataType */
 code > span.dv { color: #0000cf; } /* DecVal */
@@ -92,7 +92,7 @@ code > span.in { color: #8f5902; font-weight: bold; font-style: italic; } /* Inf
 </script>
 <style type="text/css">
   pre:not([class]) {
-    background-color: white;
+    background-color: rgb(192, 182, 182);
   }
 </style>
 
@@ -130,11 +130,25 @@ h6 {
 <body>
 
 <style type="text/css">
+img{
+  display:block;
+  width:auto;
+  margin-left:auto;
+  margin-right:auto;
+}
+
 .main-container {
   max-width: 940px;
   margin-left: auto;
   margin-right: auto;
 }
+
+body{
+  background-color: #232323;
+  color: #bdacac;
+
+}
+
 code {
   color: inherit;
   background-color: rgba(0, 0, 0, 0.04);
@@ -239,8 +253,8 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Licence 3 MIASHS - Semester 2</h1>
-<h4 class="author"><em>LOIC RAKOTOSON, <a href="mailto:contact@loicrakotoson.com">contact@loicrakotoson.com</a></em></h4>
+<h1 class="title toc-ignore">R - Licence 3 MIASHS</h1>
+<h4 class="author"><em>LOIC RAKOTOSON, <a href="https://loicrakotoson.com">loicrakotoson.com</a></em></h4>
 
 </div>
 
