gitlab font icon

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <a class="home-down bounce" href="#about"><i class="fa fa-chevron-down"></i></a>
             <!-- Social Icons -->
             <ul class="home-social">
-                <li><a href="https://gitlab.com/Lrakotoson" target="_blank"><i class="fa fa-gitlab fa-3x" aria-hidden="true"></i></a></li>
+                <li><a href="https://gitlab.com/Lrakotoson" target="_blank"><i class="fab fa-gitlab fa-3x" aria-hidden="true"></i></a></li>
                 <li><a href="https://github.com/Lrakotoson" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/loicrakotoson/?locale=en_US" target="_blank"><i class="fa fa-linkedin fa-3x"
                             aria-hidden="true"></i></a></li>
@@ -401,7 +401,7 @@
     <footer>
         <div class="container text-center">
             <div class="social">
-                <a href="https://gitlab.com/Lrakotoson" target="_blank"><i class="fa fa-gitlab fa-3x" aria-hidden="true"></i>
+                <a href="https://gitlab.com/Lrakotoson" target="_blank"><i class="fab fa-gitlab fa-3x" aria-hidden="true"></i>
                 </a>
                 <a href="https://github.com/Lrakotoson" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i>
                 </a>
