Add and configure preloader

--- a/home.html
+++ b/home.html
@@ -13,8 +13,18 @@
     <!--Stylesheets-->
     <link rel="stylesheet" href="css/main.css">
 
+    <!--External CDN-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
     <!-- Google verification -->
     <meta name="google-site-verification" content="zgHWVx0OgxuDkOt_GuHju2ZOSrE1fpgmUjV0yrxvo1s" />
 </head>
+
+<body>
+    <div id="preloader">
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+</body>
 
 </html>
